code-test브랜치 생성

--- a/01-유튜브갤러리/index.html
+++ b/01-유튜브갤러리/index.html
@@ -26,12 +26,10 @@
     <!-- .wrap>ul.video-list>li*4[data-link] -->
     <div class="wrap">
       <ul class="video-list">
-        <li data-link="https://youtu.be/Pne7e_FGGsM?feature=shared">BLACKPINK - 'How You Like That' M/V</li>
-        <li data-link="https://www.youtube.com/watch?v=6BawyJf4aKs">[MV] BIBI(비비) _ BINU(비누)</li>
-        <li data-link="https://www.youtube.com/embed/Y8JFxS1HlDo">IVE 아이브 'LOVE DIVE' MV</li>
-        <li data-link="https://www.youtube.com/embed/Jh4QFaPmdss">
-          (여자)아이들((G)I-DLE) - 'TOMBOY' Official Music Video
-        </li>
+        <li>BLACKPINK - 'How You Like That' M/V</li>
+        <li>[MV] BIBI(비비) _ BINU(비누)</li>
+        <li>IVE 아이브 'LOVE DIVE' MV</li>
+        <li>(여자)아이들((G)I-DLE) - 'TOMBOY' Official Music Video</li>
       </ul>
     </div>
   </body>
